src/snapshots/pbsql__path_convertor__tests__create_index_compound_name.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Err: "Expected 1 identifiers for the index name, got: [\"a\", \"b\"]"
