src/snapshots/pbsql__path_convertor__tests__create_table_disallow_compound_identifier.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Err: "Expected 1 identifiers for the table name, got: [\"x\", \"y\"]"
