src/snapshots/pbsql__path_convertor__tests__parser_error.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Err: "sql parser error: Unterminated string literal at Line: 3, Column 62"
