src/snapshots/pbsql__path_convertor__tests__select_null.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Ok:
  - {}
  - - SELECT
    - "  NULL"
  - - Query:
        with: ~
        body:
          Select:
            distinct: ~
            top: ~
            projection:
              - UnnamedExpr:
                  Value: "Null"
            into: ~
            from: []
            lateral_views: []
            selection: ~
            group_by:
              Expressions: []
            cluster_by: []
            distribute_by: []
            sort_by: []
            having: ~
            named_window: []
            qualify: ~
        order_by: []
        limit: ~
        limit_by: []
        offset: ~
        fetch: ~
        locks: []
        for_clause: ~
