src/snapshots/pbsql__path_convertor__tests__unknown_table_reference.snap
---
source: src/path_convertor.rs
expression: translate_result
---
Err: "Unknown table reference: ~/books/things"
